--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
       <li><a href="https://tex.stackexchange.com/">Tex Stack Exchange</a></li>
       <li><a href="http://www.ctan.org/">The Comprehensive TeX Archive Network</a></li>
       <li><a href="http://www.tug.dk/FontCatalogue/">Catálogo de fontes disponíveis no LaTeX</a> (recomendo usar as da seção "Fonts with math support" para que as equações matemáticas fiquem no formato da fonte)</li>
-      <li><a href="/~camecc/cursolatex/Apostila.pdf">Apostila do Raniere!</a></li>
+      <li><a href="apostila-raniere.pdf">Apostila do Raniere!</a></li>
     </ul>
 
     <h3>Aulas</h3>
     <ul>
-      <li><a href="/~camecc/cursolatex/aula1">Aula 1</a></li>
-      <li><a href="/~camecc/cursolatex/aula2">Aula 2</a></li>
-      <li><a href="/~camecc/cursolatex/aula3">Aula 3</a></li>
-      <li><a href="/~camecc/cursolatex/aula4">Aula 4</a></li>
-      <li><a href="/~camecc/cursolatex/aula5">Aula 5</a></li>
+      <li><a href="aula1">Aula 1</a></li>
+      <li><a href="aula2">Aula 2</a></li>
+      <li><a href="aula3">Aula 3</a></li>
+      <li><a href="aula4">Aula 4</a></li>
+      <li><a href="aula5">Aula 5</a></li>
+      <li><a href="aula6/aula6.pdf">Aula 6 (extra)</a></li>
     </ul>
 
   </body>
