corrigido links errados

--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
     </style>
   </head>
   <body>
-    <h1>Mini-Curso de LaTeX</h1>
-    <h2>Por Fábio Meneghetti e Pedro Caetano</h2>
+    <h1>Mini-Curso de LaTeXi (2016)</h1>
+    <h2>Por <a href="https://fabiom.github.io">Fábio Meneghetti</a> e <a href="https://github.com/prcaetano">Pedro Caetano</a></h2>
 
     <div style="background-color:rgb(237, 247, 117)">
     <h3>Observações</h3>
     <ul>
-      <li><b>Não haverá Aula 6. A Aula 5 será a última</b></li>
       <li>Na última aula, alguém me perguntou se dava para colocar as subseções um pouco mais para a direita. Eu pesquisei na internet e achei <a href="https://tex.stackexchange.com/questions/30965/indent-an-entire-paragraph-section">esta pergunta</a> no TeX StackExchange, e a primeira resposta funciona! (a do pacote changepage, do jeito que ele explica lá)</li>
-      <li>No meu usuário, o TeXnic Center estava bugando. Eu consegui resolver o bug da forma descrita <a href="/~camecc/cursolatex/texnicfunciona.html">aqui</a>. Alternativamente, você pode tentar usar o editor do próprio MikTeX.</li>
+      <li>No meu usuário, o TeXnic Center estava bugando. Eu consegui resolver o bug da forma descrita <a href="texnicfunciona.html">aqui</a>. Alternativamente, você pode tentar usar o editor do próprio MikTeX.</li>
     </ul>
     </div>
 
@@ -47,7 +46,6 @@
       <li><a href="aula3">Aula 3</a></li>
       <li><a href="aula4">Aula 4</a></li>
       <li><a href="aula5">Aula 5</a></li>
-      <li><a href="aula6/aula6.pdf">Aula 6 (extra)</a></li>
     </ul>
 
   </body>
