--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Mini-Curso de LaTeXi (2016)</h1>
+    <h1>Mini-Curso de LaTeX (2016)</h1>
     <h2>Por <a href="https://fabiom.github.io">Fábio Meneghetti</a> e <a href="https://github.com/prcaetano">Pedro Caetano</a></h2>
 
     <div style="background-color:rgb(237, 247, 117)">
